--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ python = "^3.11"
 pandas = "^2.2.0"
 xlrd = "^2.0.1"
 pyarrow = "^15.0.0"
+matplotlib = "^3.8.3"
+seaborn = "^0.13.2"
 
 
 [tool.poetry.group.dev.dependencies]
