--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ xlrd = "^2.0.1"
 pyarrow = "^15.0.0"
 matplotlib = "^3.8.3"
 seaborn = "^0.13.2"
+scikit-learn = "^1.4.1.post1"
 
 
 [tool.poetry.group.dev.dependencies]
